tests/dataset/tpc-ds/compiler/kotlin/q20.kt
// Generated by Mochi compiler v0.10.26 on 2025-07-15T07:22:18Z
fun div(a: Any?, b: Any?): Double {
    val x = toDouble(a)
    val y = toDouble(b)
    return if (y == 0.0) 0.0 else x / y
}

fun sum(list: List<Any?>): Number {
    var s = 0.0
    var allInt = true
    for (n in list) {
        val d = toDouble(n)
        if (d % 1.0 != 0.0) allInt = false
        s += d
    }
    return if (allInt) s.toInt() else s
}

fun String.starts_with(prefix: String): Boolean = this.startsWith(prefix)

fun toDouble(v: Any?): Double = when (v) {
    is Double -> v
    is Int -> v.toDouble()
    is String -> v.toDouble()
    else -> 0.0
}

fun json(v: Any?) {
    println(toJson(v))
}

fun toJson(v: Any?): String = when (v) {
    null -> "null"
    is String -> "\"" + v.replace("\"", "\\\"") + "\""
    is Boolean, is Number -> v.toString()
    is Map<*, *> -> v.entries.joinToString(prefix = "{", postfix = "}") { toJson(it.key.toString()) + ":" + toJson(it.value) }
    is Iterable<*> -> v.joinToString(prefix = "[", postfix = "]") { toJson(it) }
    else -> toJson(v.toString())
}

class Group<K, T>(val key: K, val items: MutableList<T>) : MutableList<T> by items
// Code generated from q20.mochi

data class CatalogSale(var cs_item_sk: Int, var cs_sold_date_sk: Int, var cs_ext_sales_price: Double)

data class Item(var i_item_sk: Int, var i_item_id: String, var i_item_desc: String, var i_category: String, var i_class: String, var i_current_price: Double)

data class DateDim(var d_date_sk: Int, var d_date: String)

data class Catalog_sale(var cs_item_sk: Int, var cs_sold_date_sk: Int, var cs_ext_sales_price: Double)

data class Date_dim(var d_date_sk: Int, var d_date: String)

data class Item(var i_item_sk: Int, var i_item_id: String, var i_item_desc: String, var i_category: String, var i_class: String, var i_current_price: Double)

val catalog_sales = mutableListOf(Catalog_sale(cs_item_sk = 1, cs_sold_date_sk = 1, cs_ext_sales_price = 100.0), Catalog_sale(cs_item_sk = 1, cs_sold_date_sk = 1, cs_ext_sales_price = 200.0), Catalog_sale(cs_item_sk = 2, cs_sold_date_sk = 1, cs_ext_sales_price = 150.0), Catalog_sale(cs_item_sk = 1, cs_sold_date_sk = 2, cs_ext_sales_price = 300.0), Catalog_sale(cs_item_sk = 2, cs_sold_date_sk = 2, cs_ext_sales_price = 150.0), Catalog_sale(cs_item_sk = 3, cs_sold_date_sk = 1, cs_ext_sales_price = 50.0))

val item = mutableListOf(Item(i_item_sk = 1, i_item_id = "ITEM1", i_item_desc = "Item One", i_category = "A", i_class = "X", i_current_price = 10.0), Item(i_item_sk = 2, i_item_id = "ITEM2", i_item_desc = "Item Two", i_category = "A", i_class = "X", i_current_price = 20.0), Item(i_item_sk = 3, i_item_id = "ITEM3", i_item_desc = "Item Three", i_category = "D", i_class = "Y", i_current_price = 15.0))

val date_dim = mutableListOf(Date_dim(d_date_sk = 1, d_date = "2000-02-10"), Date_dim(d_date_sk = 2, d_date = "2000-02-20"))

val filtered = run {
    val __groups = mutableMapOf<MutableMap<String, Any?>, Group<MutableMap<String, Any?>, MutableMap<String, Any?>>>()
    val __order = mutableListOf<MutableMap<String, Any?>>()
    for (cs in catalog_sales) {
        for (i in item) {
            if (cs.cs_item_sk == i.i_item_sk) {
                for (d in date_dim) {
                    if (cs.cs_sold_date_sk == d.d_date_sk) {
                        if (i.i_category in mutableListOf("A", "B", "C") && d.d_date >= "2000-02-01" && d.d_date <= "2000-03-02") {
                            val __k = (mutableMapOf("id" to i.i_item_id, "desc" to i.i_item_desc, "cat" to i.i_category, "class" to i.i_class, "price" to i.i_current_price) as MutableMap<String, Any?>)
                            var __g = __groups[__k]
                            if (__g == null) {
                                __g = Group(__k, mutableListOf<MutableMap<String, Any?>>())
                                __groups[__k] = __g
                                __order.add(__k)
                            }
                            __g.add(mutableMapOf("cs" to cs, "i" to i, "d" to d) as MutableMap<String, Any?>)
                        }
                    }
                }
            }
        }
    }
    val __res = mutableListOf<Any?>()
    for (k in __order) {
        val g = __groups[k]!!
        __res.add(mutableMapOf("i_item_id" to (g.key as MutableMap<String, Any?>)["id"], "i_item_desc" to (g.key as MutableMap<String, Any?>)["desc"], "i_category" to (g.key as MutableMap<String, Any?>)["cat"], "i_class" to (g.key as MutableMap<String, Any?>)["class"], "i_current_price" to (g.key as MutableMap<String, Any?>)["price"], "itemrevenue" to sum(run {
    val __res = mutableListOf<Any?>()
    for (x in g) {
        __res.add((x as MutableMap<String, Any?>)["cs_ext_sales_price"])
    }
    __res
})))
    }
    __res
}

val class_totals = run {
    val __groups = mutableMapOf<Any?, Group<Any?, MutableMap<String, Any?>>>()
    val __order = mutableListOf<Any?>()
    for (f in filtered) {
        val __k = (f as MutableMap<String, Any?>)["i_class"]
        var __g = __groups[__k]
        if (__g == null) {
            __g = Group(__k, mutableListOf<MutableMap<String, Any?>>())
            __groups[__k] = __g
            __order.add(__k)
        }
        __g.add(f)
    }
    val __res = mutableListOf<Any?>()
    for (k in __order) {
        val g = __groups[k]!!
        __res.add(mutableMapOf("class" to g.key, "total" to sum(run {
    val __res = mutableListOf<Any?>()
    for (x in g) {
        __res.add((x as MutableMap<String, Any?>)["itemrevenue"])
    }
    __res
})))
    }
    __res
}

val result = run {
    val __res = mutableListOf<Any?>()
    for (f in filtered) {
        for (t in class_totals) {
            if ((f as MutableMap<String, Any?>)["i_class"] == (t as MutableMap<String, Any?>)["class"]) {
                __res.add(mutableMapOf("i_item_id" to (f as MutableMap<String, Any?>)["i_item_id"], "i_item_desc" to (f as MutableMap<String, Any?>)["i_item_desc"], "i_category" to (f as MutableMap<String, Any?>)["i_category"], "i_class" to (f as MutableMap<String, Any?>)["i_class"], "i_current_price" to (f as MutableMap<String, Any?>)["i_current_price"], "itemrevenue" to (f as MutableMap<String, Any?>)["itemrevenue"], "revenueratio" to div(toDouble((toDouble((f as MutableMap<String, Any?>)["itemrevenue"]) * toDouble(100.0))), toDouble((t as MutableMap<String, Any?>)["total"]))))
            }
        }
    }
    __res
}.sortedBy { mutableListOf((it as MutableMap<String, Any?>)["i_category"], (it as MutableMap<String, Any?>)["i_class"], (it as MutableMap<String, Any?>)["i_item_id"], (it as MutableMap<String, Any?>)["i_item_desc"]) as Comparable<Any> }

fun main() {
    json(result)
}
